# cpenv

./: .coveragerc  .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  quickinstall.bat  quickinstall.sh  requirements-dev.txt  requirements.txt  setup.py  tasks.py
.github/workflows/: test.yml  tests.yml
cpenv/: __init__.py  __main__.py  _compat.py  _self_version_check.py  api.py  cache.py  cli.py  compat.py  defaults.py  deps.py  environment.py  envutil.py  envutils.py  hooks.py  http.py  log.py  mappings.py  models.py  module.py  paths.py  reporter.py  resolver.py  scripts.py  shell.py  util.py  utils.py  versions.py
cpenv/cli/: __init__.py  activate.py  clone.py  copy.py  core.py  create.py  edit.py  env.py  info.py  list.py  localize.py  publish.py  remove.py  repo.py  version.py
cpenv/repos/: __init__.py  base.py  filesystem.py  github.py  local.py  s3.py  shotgun.py
cpenv/shell/: __init__.py  envutils.py  shell.py
docs/: Makefile  api-guide.rst  api.rst  conf.py  environments.rst  guide.rst  hooks.rst  index.rst  make.bat  modules.rst  whatsnext.rst
tests/: __init__.py  __main__.py  conftest.py  test_api.py  test_hooks.py  test_mappings.py  test_paths.py  test_repos.py  test_resolver.py  test_versions.py  utils.py
