[tool.poetry]
name = "cpenv"
version = "0.5.4"
description = "Cross-platform module and environment management."
authors = ["Dan Bradham <danielbradham@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
cpenv = "cpenv.__main__:main"

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"
tqdm = "^4.46.0"
colorama = "^0.4.3"
psutil = "^5.7.0"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
coverage = {extras = ["toml"], version = "^5.1"}
isort = "^4.3.21"
shotgun-api3 = {git = "https://github.com/shotgunsoftware/python-api", rev = "v3.2.1"}

[tool.coverage.report]
omit = [
    "*/vendor/*",
]

[tool.isort]
from_first = false
import_heading_stdlib = "Standard library imports"
import_heading_firstparty = "Local imports"
import_heading_localfolder = "Local imports"
import_heading_thirdparty = "Third party imports"
indent = "    "
known_first_party = "cpenv"
known_third_party = "libsass,pytest,setuptools"
default_section = "THIRDPARTY"
line_length = 79
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = 2
skip = "venv,cpenv/vendor,docs,.venv"
multi_line_output = 3
include_trailing_comma = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

