[tool.poetry]
name = "cpenv"
version = "0.5.32"
description = "Cross-platform module and environment management."
authors = ["Dan Bradham <danielbradham@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.scripts]
cpenv = "cpenv.__main__:main"


[tool.poetry.dependencies]
python = "^3.6.2"
tqdm = "^4.46.0"
colorama = "^0.4.3"
psutil = "^5.7.0"


[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.1"}
isort = "^4.3.21"
rope = "^0.17.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
typer = "^0.4.0"
black = "^22.3.0"


[tool.coverage.run]
omit = ["cpenv/vendor/*"]


[tool.isort]
profile = "black"
known_first_party = "cpenv"
skip = "venv,cpenv/vendor,docs,.venv"
multi_line_output = "3"
include_trailing_comma = "True"


[tool.black]
extend-exclude = '''
^/(
    cpenv/vendor
    | docs
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
